# 3d-obj

./: 3d-obj.cabal  LICENSE  README.md  stack.yaml
src/: Model.hs
