name:                3d-obj
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/sawatani/3d-obj#readme
license:             BSD3
license-file:        LICENSE
author:              Kunio SAWATANI
maintainer:          devel@fathens.org
copyright:           fathens.org
category:            library
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable 3d-obj-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , 3d-obj
  default-language:    Haskell2010

test-suite 3d-obj-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , 3d-obj
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/sawatani/3d-obj
